--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+  font-family: "Poppins-Bold";
+}
 .btn-success {
   border-radius: 33px;
   background-color: #21b573;
@@ -32,5 +35,20 @@
 .cover-text h1 {
   line-height: 70px;
   font-weight: 700;
-  font-family: "Poppins-Bold";
+}
+
+/* Details */
+#details img {
+  width: 66px;
+  height: 85px;
+}
+#details p {
+  color: #585859;
+}
+.details-item {
+  background-color: #f8fffb;
+  width: 220px;
+  height: 210px;
+  box-shadow: 1px 1px 3px black;
+  border-radius: 10px;
 }
