--- a/style.css
+++ b/style.css
@@ -52,3 +52,22 @@
   box-shadow: 1px 1px 3px black;
   border-radius: 10px;
 }
+.card-text img {
+  height: 24px;
+  width: 24px;
+}
+#courses h2,
+#courses h5 {
+  color: #413960;
+}
+#courses h2 {
+  font-weight: bolder;
+}
+#courses .card {
+  border-style: none;
+  box-shadow: 0 0 20px 1px rgb(219, 211, 211);
+  border-radius: 18px;
+}
+#courses .text-muted {
+  font-size: 14px;
+}
